<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/action_search"/>
    <item android:id="@+id/action_favorites"
        android:title="@string/favorites"
        app:showAsAction="never|collapseActionView"
        />

    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"
         />
    <item android:id="@+id/action_clear_reload"
        android:title="@string/clear_and_reload"
        app:showAsAction="never"
        />

</menu>