<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include android:id="@+id/ll_current_location" layout="@layout/layout_current_location"/>
        <include android:id="@+id/ll_custom_location" layout="@layout/layout_custom_location" android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/radius"
            android:textSize="@dimen/text_size_settings_activity"
            />

        <SeekBar
            android:id="@+id/sb_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/tv_records_per_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/records_per_page"
            android:textSize="@dimen/text_size_settings_activity"
            />

        <SeekBar
            android:id="@+id/sb_records_per_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/tv_photos_per_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/photos_per_page"
            android:textSize="@dimen/text_size_settings_activity"
            />

        <SeekBar
            android:id="@+id/sb_photos_per_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3"
            />
    </LinearLayout>
</ScrollView>